objects/Reimbursement__c.object
<CustomObject>
    <fields>
        <fullName>Accel_Spend__c</fullName>
        <label>Accel Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accels_Portion_of_Fees__c</fullName>
        <formula>case(
RecordType.Name,
&quot;Municipality Fee&quot;,

(if( and(Check_Request__c = FALSE, DATEVALUE(CreatedDate)&lt; DATE(2021,04,09) ),((Per_VGT_Fee__c * Number_of_VGTs_Installed__c)/2) + (( Number_of_Redemption_Terminals_Installed__c * NRT_Fee__c )/2) + Terminal_Operator_Fee__c + (Establishment_License_Fee__c/2) + ( Redemption_Terminal_Fee__c/2 ),

(if( and(Check_Request__c = FALSE, DATEVALUE(CreatedDate)&gt;= DATE(2021,04,09) ),((Per_VGT_Fee__c * Number_of_VGTs_Installed__c)/2) + (( Number_of_Redemption_Terminals_Installed__c * NRT_Fee__c )/2) + Terminal_Operator_Fee__c  + ( Redemption_Terminal_Fee__c/2 )+ Establishment_License_Fee__c * BLANKVALUE(VALUE(TEXT(Establishment_License_Fee_Split__c))/100,0) ,

if(and(Check_Request__c = TRUE, Deduction_Amount__c = 0, DATEVALUE(CreatedDate)&lt; DATE(2021,04,09)),((Per_VGT_Fee__c * Number_of_VGTs_Installed__c)/2) + (( Number_of_Redemption_Terminals_Installed__c * NRT_Fee__c )/2) + Terminal_Operator_Fee__c + (Establishment_License_Fee__c/2) + ( Redemption_Terminal_Fee__c/2 ),

if(and(Check_Request__c = TRUE, Deduction_Amount__c = 0, DATEVALUE(CreatedDate)&gt;= DATE(2021,04,09)),((Per_VGT_Fee__c * Number_of_VGTs_Installed__c)/2) + (( Number_of_Redemption_Terminals_Installed__c * NRT_Fee__c )/2) + Terminal_Operator_Fee__c  + ( Redemption_Terminal_Fee__c/2 )+Establishment_License_Fee__c * BLANKVALUE(VALUE(TEXT(Establishment_License_Fee_Split__c))/100,0)  ,

if(and(Check_Request__c = TRUE, Deduction_Amount__c &gt; 0), Total_Fees_Paid_by_Location__c,
0))))))),

&quot;Amusement Fee&quot;,
( Amount_Requested_For_Reimbursement__c ),

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel&apos;s Portion of Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accepted_As__c</fullName>
        <formula>IF(INCLUDES(Opportunity_RelatedList__r.Accepted_As__c, &quot;Borderline&quot;),&quot;Borderline&quot;, NULL)+ BR()+
IF(INCLUDES(Opportunity_RelatedList__r.Accepted_As__c, &quot;Company Generated&quot;),&quot;Company Generated&quot;, NULL)+ BR()+
IF(INCLUDES(Opportunity_RelatedList__r.Accepted_As__c, &quot;Organic&quot;),&quot;Organic&quot;, NULL)+ BR()+
IF(INCLUDES(Opportunity_RelatedList__r.Accepted_As__c, &quot;Competitor&quot;),&quot;Competitor&quot;, NULL)+ BR()+
IF(INCLUDES(Opportunity_RelatedList__r.Accepted_As__c, &quot;Turnover&quot;),&quot;Turnover&quot;, NULL)+ BR()+
IF(INCLUDES(Opportunity_RelatedList__r.Accepted_As__c, &quot;Referral&quot;),&quot;Referral&quot;, NULL)+ BR()+
IF(INCLUDES(Opportunity_RelatedList__r.Accepted_As__c, &quot;Competitor Borderline&quot;),&quot;Competitor Borderline&quot;, NULL)+ BR()+
IF(INCLUDES(Opportunity_RelatedList__r.Accepted_As__c, &quot;Organic Borderline&quot;),&quot;Organic Borderline&quot;, NULL)+ BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted As</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Updated label from &quot;Account&quot; to &quot;Account - Related List&quot; to differentiate from &quot;Account&quot; field</description>
        <label>Account - Related List</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reimbursement</relationshipLabel>
        <relationshipName>Reimbursements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>Changes the Account Status to NOT Live if Accel VGT Date is Null</description>
        <formula>IF (ISNULL( Account__r.Accel_VGT_Live_Date__c ), &quot;NOT LIVE&quot;, &quot;LIVE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Run_End_Date_Invoice__c</fullName>
        <label>Actual Run End Date (Invoice)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Run_Start_Date_Invoice__c</fullName>
        <label>Actual Run Start Date (Invoice)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_of_Request__c</fullName>
        <formula>TODAY()- DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested_For_Reimbursement__c</fullName>
        <label>Amount Requested For Reimbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Method__c</fullName>
        <label>Approval Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SF Approval Process</fullName>
                </value>
                <value>
                    <fullName>Pre-Approval Compliance &amp; Accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Alarm_Equipment_Costs__c</fullName>
        <label>Approved % Alarm Equipment Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_Alarm_Monthly_Monitoring__c</fullName>
        <label>Approved Monthly Monitoring</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_Monitoring_Fees__c</fullName>
        <label>Approved Monitoring Fees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alarm</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Both Alarm &amp; Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Video_Camera_Installation__c</fullName>
        <label>Approved % Video Camera Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_Video_System_Equi__c</fullName>
        <label>Approved % Video System Equipment Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Azure_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Azure External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Comments__c</fullName>
        <label>Compliance Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_VGT_Count__c</fullName>
        <formula>TEXT(  Account__r.Current_VGT_Count__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current VGT Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Status_Change__c</fullName>
        <description>When Status was last changed. Used to calculate the number of days in current Status. Populated by automation</description>
        <label>Date of Last Status Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Status__c</fullName>
        <formula>TODAY()- Date_of_Last_Status_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deduction_Amount__c</fullName>
        <label>Deduction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deduction_Countdown__c</fullName>
        <formula>TODAY()-Payment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deduction Days Elapsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deduction_End_Date__c</fullName>
        <label>Deduction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deduction_Needed__c</fullName>
        <label>Deduction Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deduction_Start_Date__c</fullName>
        <label>Deduction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Derek_Harmer_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Derek Harmer Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Divider_Material__c</fullName>
        <label>Divider Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plexiglass</fullName>
                </value>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>Plastic</fullName>
                </value>
                <value>
                    <fullName>Other (Please add in Notes section)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Establishment_License_Fee_Split__c</fullName>
        <description>If new values are added, the API Name should be a NUMERICAL value
This field is referenced in a the formula field 	Accels_Portion_of_Fees__c</description>
        <label>Establishment License Fee Split</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0%</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50%</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Establishment_License_Fee__c</fullName>
        <label>Establishment License Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Alarm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Alarm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Video_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Video System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A file needs to be uploaded with the reimbursement request</inlineHelpText>
        <label>File Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Approval_rcvd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Approval rcvd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frame_Material__c</fullName>
        <label>Frame Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Frame</fullName>
                </value>
                <value>
                    <fullName>Steel Frame</fullName>
                </value>
                <value>
                    <fullName>Wood Frame</fullName>
                </value>
                <value>
                    <fullName>Aluminum Frame</fullName>
                </value>
                <value>
                    <fullName>Plastic Frame</fullName>
                </value>
                <value>
                    <fullName>Other (please add in Notes section)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Account__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Fee__c</fullName>
        <label>License Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>Account__r.ShippingStreet &amp; BR() &amp; 
Account__r.ShippingCity &amp; BR() &amp;
Account__r.ShippingState &amp; BR() &amp;
Account__r.ShippingPostalCode  &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Requesting_to_Split_Video_Alarm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Requesting to Split Video/Alarm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Spend__c</fullName>
        <label>Location Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Expense_Type__c</fullName>
        <formula>&quot;Co-Op - Field Controlled&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Expense Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Reimbursement_Amount__c</fullName>
        <label>Marketing Reimbursement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Request</label>
        <referenceTo>Marketing_Request__c</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Account__r.MunicipalityLookup__c, Account__r.MunicipalityLookup__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRT_Fee__c</fullName>
        <label>Per NRT Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Redemption_Terminals_Installed__c</fullName>
        <label>Number of Redemption Terminals Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_VGTs_Installed__c</fullName>
        <label>Number of Machines Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Date__c</fullName>
        <label>On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Hold_Notes__c</fullName>
        <inlineHelpText>Reason to put the request on hold.</inlineHelpText>
        <label>On Hold Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_to_the_Order_Of__c</fullName>
        <label>Pay to the Order Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Contractor_Name__c</fullName>
        <label>Payee Contractor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payee_Info__c</fullName>
        <label>Payee Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Municipality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Memo__c</fullName>
        <description>per monday.com request, this field is visible only to RMs
https://accel-entertainment.monday.com/boards/942883797/pulses/1448470905</description>
        <inlineHelpText>This information will be shown in locations&apos; bank statements.</inlineHelpText>
        <label>Payment Memo</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                    <default>true</default>
                    <label>ACH</label>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Per_VGT_Fee__c</fullName>
        <label>Per VGT Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Comments__c</fullName>
        <label>Project Manager Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redemption_Terminal_Fee__c</fullName>
        <label>Redemption Terminal Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Request_For__c</fullName>
        <label>Reimbursement Request For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alarm</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Monitoring Fees</fullName>
                </value>
                <value>
                    <fullName>Surveillance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Security_Comments__c</fullName>
        <label>Security Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Reviewed_Quote_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security Reviewed Quote/Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>In Amusement Approval</fullName>
                </value>
                <value>
                    <fullName>In Gaming Approval</fullName>
                </value>
                <value>
                    <fullName>In Security Approval</fullName>
                </value>
                <value>
                    <fullName>In Compliance Approval</fullName>
                </value>
                <value>
                    <fullName>In Accounting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved - Pending Go Live</fullName>
                </value>
                <value>
                    <fullName>Approved - Payment Pending</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                    <isActive>false</isActive>
                    <label>Requested</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminal_Operator_Fee__c</fullName>
        <label>Terminal Operator Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Accel_will_reimburs_locatio__c</fullName>
        <formula>if(Datevalue(CreatedDate)&lt;Date(2021,04,09),(Amount_Paid__c +  Establishment_License_Fee__c +( Number_of_VGTs_Installed__c * Per_VGT_Fee__c)+( Number_of_Redemption_Terminals_Installed__c * NRT_Fee__c ))/2 + Terminal_Operator_Fee__c,
(Amount_Paid__c  +( Number_of_VGTs_Installed__c * Per_VGT_Fee__c)+( Number_of_Redemption_Terminals_Installed__c * NRT_Fee__c ))/2 + Terminal_Operator_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Accel Will Reimburse Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Authorized_Reimbursement_Cost__c</fullName>
        <label>Total Authorized Reimbursement Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Paid_By_Accel__c</fullName>
        <label>Total Fees Paid By Accel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Paid_by_Location__c</fullName>
        <formula>if( RecordType.Name = &quot;Municipality Fee&quot;,
(Per_VGT_Fee__c * Number_of_VGTs_Installed__c) + ( Number_of_Redemption_Terminals_Installed__c * NRT_Fee__c ) + Terminal_Operator_Fee__c + (Establishment_License_Fee__c) + ( Redemption_Terminal_Fee__c ),
if( RecordType.Name = &quot;Amusement Fee&quot;,
( Amount_Requested_For_Reimbursement__c * 2),
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fees Paid by Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Cameras_in_System__c</fullName>
        <label>Total Number of Cameras in System</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Vendor_Amount__c</fullName>
        <formula>Marketing_Request__r.Total_Quote_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Vendor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_Cameras_Monitoring_Gaming_Area__c</fullName>
        <label># Cameras on VG Area/Entrances/Exits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electrical Work</fullName>
                </value>
                <value>
                    <fullName>Municipality Fees</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Annual IGB VGT License Fee</fullName>
                </value>
                <value>
                    <fullName>Month End Variance</fullName>
                </value>
                <value>
                    <fullName>Negative Carryforward</fullName>
                </value>
                <value>
                    <fullName>Half of Sci Games Admin Share</fullName>
                </value>
                <value>
                    <fullName>Video Alarm System</fullName>
                    <label>Alarm System</label>
                </value>
                <value>
                    <fullName>Buildout</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Access Control</fullName>
                </value>
                <value>
                    <fullName>Monthly Monitoring</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Deductions/Reimbursement</fullName>
                    <isActive>false</isActive>
                    <label>Miscellaneous Deductions/Reimbursement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VGT_Live_Date__c</fullName>
        <formula>TEXT(Account__r.Accel_VGT_Live_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VGT Live Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Witholding_Periods__c</fullName>
        <label>Witholding Periods (in weeks)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reimbursement</label>
    <listViews>
        <fullName>Accounting_Approval_Queue_Reimbursement</fullName>
        <filterScope>Queue</filterScope>
        <label>Accounting Approval Queue</label>
        <queue>Accounting_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Reimbursements</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Total_Amount_Accel_will_reimburs_locatio__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Reimbursements</label>
    </listViews>
    <listViews>
        <fullName>All_Video_Alarm_Reimbursements</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Total_Amount_Accel_will_reimburs_locatio__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Reimbursement__c.Video_Alarm_System</value>
        </filters>
        <label>All Video Alarm Reimbursements</label>
    </listViews>
    <listViews>
        <fullName>Compliance_Reimbursement</fullName>
        <filterScope>Queue</filterScope>
        <label>Compliance</label>
        <queue>Compliance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_for_Reimbursement_Reimbursement</fullName>
        <filterScope>Queue</filterScope>
        <label>Compliance for Reimbursement</label>
        <queue>Compliance_for_Reimbursement</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Denied_Reimbursements</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Total_Amount_Accel_will_reimburs_locatio__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <label>Denied Reimbursements</label>
    </listViews>
</CustomObject>